hphp/hack/test/typecheck/repeated_xhp_attrib.php
<?hh

class :div {}

function foo(): mixed {
  return <div foo="a" foo="b">stuff</div>;
}
